[package]
name = "redeemer"
version = "0.1.0"
edition = "2024"

[dependencies]
bevy = { version = "0.16.1", features = ["dynamic_linking", "wayland", "file_watcher"] }
log = { version = "*", features = ["max_level_debug", "release_max_level_warn"] }
avian2d = "0.3.1"
rand = "0.9.2"
bevy_ecs_tiled = { version = "0.9.0", features = ["avian"] }
leafwing-input-manager = "0.17.1"
bevy_light_2d = "0.7.0"
seldom_state = { version = "0.14.0", features = ["leafwing_input"] }
bevy_spritesheet_animation = { version = "3.1.0", default-features = false }

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3
